--- a/backup/index.html
+++ b/backup/index.html
@@ -124,11 +124,15 @@
 
         <section id="testimonials" class="testimonials">
             <div class="container">
-                <h2>Feedback</h2>
+                <h2>O Que Meus Clientes Dizem</h2>
                 <div class="testimonial-carousel">
                     <blockquote class="testimonial-item">
-                        <p>"Julia é uma profissional de ponta, com atenção ao detalhe e uma abordagem voltada à eficiência dos serviços oferecidos, a corretora tem capacidade de utilizar sua combinação de habilidades para fornecer ao cliente uma experiência de negociação imobiliária absolutamente diferenciada, prezando pela eficiência e satisfação de seus clientes."
-                            <div class="client-profile"><img class="client-icon"><p class="client-id">João Pedro de Paula, frontend dev e advogado</p></div>
+                        <p>"Julia foi fundamental para encontrarmos nossa casa dos sonhos. Seu conhecimento e dedicação fizeram toda a diferença!"</p>
+                        Maria e João Silva, Novos proprietários em Guararema
+                    </blockquote>
+                    <blockquote class="testimonial-item">
+                        <p>"Profissionalismo e atenção aos detalhes impecáveis. Julia tornou a venda do nosso imóvel uma experiência tranquila e bem-sucedida."</p>
+                        Roberto e Ana Santos, Venderam seu imóvel em tempo recorde
                     </blockquote>
                 </div>
             </div>
