--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <div class="container">
             <nav class="navbar">
                 <ul>
-                    <img src="https://github.com/jpcardozx/julia_realstate/blob/main/logos/cdmp/2-removebg-preview.png?raw=true" class="logo" alt="Julia Maria Paiva Imóveis" width="150" height="50">
+                    <img src="https://github.com/jpcardozx/julia_realstate/blob/main/logos/cdmp/2-removebg-preview.png?raw=true" class="logo" alt="Julia Maria Paiva Imóveis" width="150" height="150">
                     <li><a href="#home">Início</a></li>
                     <li><a href="#about">Sobre Mim</a></li>
                     <li><a href="#properties">Imóveis</a></li>
                     <li><a href="#services">Serviços</a></li>
                     <li><a href="#testimonials">Depoimentos</a></li>
                     <li><a href="#contact">Contato</a></li>
-                    <a href="#contact" class="cta-btn">  Agende uma Consulta Gratuita  </a>
+                    <li><div href="#contact" class="cta-btn">  Agende uma Consulta Gratuita  </div></li>
                 </ul>
             </nav>
         </div>
@@ -68,7 +68,7 @@
                         <li>Atendimento rápido, personalizado e dedicado</li>
                         <li>Rede extensa de contatos no setor para te auxiliar com as melhores oportunidades</li>
                     </ul>
-                    <a href="#contact" class="cta-btn">Agende uma Conversa</a>
+                    <button href="#contact" class="cta-btn">Agende uma Conversa</button>
                 </div>
                 <div class="about-image">
                     <img src="julia-maria-paiva.jpg" alt="Julia Maria Paiva Cardozo de Mello - Corretora de Imóveis" width="400" height="500">
@@ -82,7 +82,7 @@
                 <p class="section-subtitle">Descubra oportunidades únicas selecionadas especialmente para você</p>
                 <div class="property-grid">
                     <article class="property-item">
-                        <img src="casa-alto-padrao.jpg" alt="Casa de Alto Padrão em Guararema" width="350" height="250">
+                        <img src="https://images.unsplash.com/photo-1416331108676-a22ccb276e35?q=80&w=2067&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Casa de Alto Padrão em Guararema" width="350" height="250">
                         <div class="property-details">
                             <h3>Casa de Alto Padrão</h3>
                             <p class="property-price">R$ 750.000</p>
@@ -128,7 +128,7 @@
                 <div class="testimonial-carousel">
                     <blockquote class="testimonial-item">
                         <p>"Julia é uma profissional de ponta, com atenção ao detalhe e uma abordagem voltada à eficiência dos serviços oferecidos, a corretora tem capacidade de utilizar sua combinação de habilidades para fornecer ao cliente uma experiência de negociação imobiliária absolutamente diferenciada, prezando pela eficiência e satisfação de seus clientes."
-                            <div class="client-profile"><img class="client-icon"><p class="client-id">João Pedro de Paula, frontend dev e advogado</p></div>
+                            <div class="client-profile"><img class="client-icon" src=""><p class="client-id">João Pedro C., 24 anos, Desenvolvedor FrontStack e Advogado</p></div>
                     </blockquote>
                 </div>
             </div>
@@ -136,7 +136,7 @@
 
         <section id="contact" class="contact">
             <div class="container">
-                <h2>Vamos Conversar Sobre Seus Sonhos Imobiliários</h2>
+                <h2>Vamos Conversar Sobre Seu Plano Imobiliário de Aquisição</h2>
                 <p>Estou pronta para ajudar você a encontrar o imóvel perfeito ou vender sua propriedade pelo melhor valor. Agende uma consulta gratuita hoje!</p>
                 <form action="#" method="post" class="contact-form">
                     <input type="text" name="name" placeholder="Seu Nome" required>
@@ -159,10 +159,10 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info">
-                    <img src="logo-footer.png" alt="Julia Maria Paiva Imóveis" width="120" height="40">
+                    <img src="https://github.com/jpcardozx/julia_realstate/blob/main/logos/cdmp/cdmp%20(2)/1.png?raw=true" alt="Julia Maria Paiva Imóveis" width="150" height="150">
                     <p>Julia Maria Paiva Cardozo de Mello</p>
                     <p>CRECI/SP nº 282.864-F</p>
-                    <p>Tel: (11) 99999-9999</p>
+                    <p>Tel: (11) 98102-47499</p>
                     <p>Email: contato@juliamariapaivaim.com.br</p>
                 </div>
                 <nav class="footer-nav">
