--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </article>
                     <!-- Adicione mais itens de propriedade conforme necessário -->
                 </div>
-                <a href="#" class="cta-btn">Ver Todos os Imóveis</a>
+            <a href="#" class="cta-btn">Ver Todos os Imóveis</a>
             </div>
         </section>
 
@@ -124,11 +124,11 @@
 
         <section id="testimonials" class="testimonials">
             <div class="container">
-                <h2>Feedback</h2>
+                <h2>Depoimentos - Confiabilidade</h2>
                 <div class="testimonial-carousel">
                     <blockquote class="testimonial-item">
-                        <p>"Julia é uma profissional de ponta, com atenção ao detalhe e uma abordagem voltada à eficiência dos serviços oferecidos, a corretora tem capacidade de utilizar sua combinação de habilidades para fornecer ao cliente uma experiência de negociação imobiliária absolutamente diferenciada, prezando pela eficiência e satisfação de seus clientes."
-                            <div class="client-profile"><img class="client-icon" src=""><p class="client-id">João Pedro C., 24 anos, Desenvolvedor FrontStack e Advogado</p></div>
+                        <p style="width: 620px; margin: 32px; text-align: justify;">"Julia destaca-se no mercado como uma corretora de imóveis em ascensão, combinando um olhar minucioso para os detalhes com uma busca incansável por eficiência em todos os aspectos de seus serviços. Sua habilidade em unir conhecimento técnico, experiência no mercado e uma abordagem personalizada resulta em uma experiência de negociação imobiliária verdadeiramente superior. Julia não apenas atende às necessidades de seus clientes, mas se antecipa a elas, oferecendo soluções que superam expectativas e promovem a máxima satisfação. Sua dedicação inabalável à qualidade e ao sucesso de cada transação reflete um compromisso inigualável com a excelência, transformando a experiência de compra e venda de imóveis em algo realmente diferenciado."</p>
+                        <div class="client-profile" style="max-width: 150px; height: 100%; center; text-align: center; align-items: center;"><img class="client-icon" src="https://github.com/jpcardozx/julia_realstate/blob/main/logos/assets/20240117_145921.jpg?raw=true" width="50px" height="50px"><p class="client-id">João Pedro C., Desenvolvedor FrontStack e Advogado</p></div>
                     </blockquote>
                 </div>
             </div>
