--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Julia Maria Paiva Cardozo de Mello - Sua parceira imobiliária em Guararema. Encontre o imóvel dos seus sonhos com atendimento personalizado e expertise local.">
     <title>Julia Maria Paiva | Imóveis em Guararema - Realize seu Sonho Conosco</title>
+    <link rel="icon" href="https://github.com/jpcardozx/julia_realstate/blob/main/logos/cdmp/2-removebg-preview.png?raw=true" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,7 +62,7 @@
             <div class="container about-content">
                 <div class="about-text">
                     <h2>Conheça Nossa Corretora!</h2>
-                    <p>Com experiência no mercado imobiliário de Guararema, entusiasta do mercado e com anos de experiência em empreendimentos e assessoria financeira, Julia possui conhecimento local e compromisso com a excelência garantem que você tenha uma experiência de compra ou venda tranquila e bem-sucedida.</p>
+                    <p>Com experiência consolidada no Município de Guararema, entusiasta do mercado e com anos de experiência em empreendimentos e assessoria financeira, Julia possui conhecimento local e compromisso com a excelência que garantem uma experiência de compra ou venda tranquila e bem-sucedida.</p>
                     <ul class="about-highlights">
                         <li>Especialista em imóveis de alto padrão</li>
                         <li>Amplo conhecimento do mercado local</li>
@@ -71,7 +72,7 @@
                     <button href="#contact" class="cta-btn">Agende uma Conversa</button>
                 </div>
                 <div class="about-image">
-                    <img src="julia-maria-paiva.jpg" alt="Julia Maria Paiva Cardozo de Mello - Corretora de Imóveis" width="400" height="500">
+                    <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?q=80&w=1973&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Julia Maria Paiva Cardozo de Mello - Corretora de Imóveis" width="900" height="1125">
                 </div>
             </div>
         </section>
@@ -108,15 +109,18 @@
                 <div class="service-list">
                     <div class="service-item">
                         <h3>Consultoria Imobiliária Personalizada</h3>
-                        <p>Análise detalhada do seu perfil e objetivos para encontrar o imóvel ideal ou a melhor estratégia de venda.</p>
+                        <p style="margin-bottom: 12px;">Aqui, seu sonho é levado a sério. Mais do que apenas encontrar um imóvel, nossa missão é compreender profundamente suas necessidades, estilo de vida e aspirações. Cada detalhe da sua jornada é importante para nós, desde o primeiro contato até a entrega das chaves.</p>
+                        <p>Com nossa consultoria personalizada, você não recebe apenas uma lista de opções; você ganha um parceiro dedicado, que vai guiar cada passo com segurança e expertise. Transformamos a complexidade do mercado imobiliário em uma experiência fluida e sem preocupações.</p>
                     </div>
                     <div class="service-item">
                         <h3>Avaliação Precisa de Imóveis</h3>
-                        <p>Utilizando dados de mercado e minha expertise local para determinar o valor justo do seu imóvel.</p>
+                        <p style="margin-bottom: 12px;">Cada imóvel conta uma história, e nossa missão é capturar o valor verdadeiro que ele representa. Utilizamos nossa experiência local e conhecimentos de mercado para oferecer uma avaliação que não apenas reflete o valor monetário, mas também reconhece a singularidade de cada propriedade.</p>
+                        <p>Seja para vender ou comprar, você merece uma avaliação que esteja à altura do potencial do seu imóvel. Nossa abordagem meticulosa garante que você tenha a base sólida necessária para tomar decisões informadas e seguras.</p>
                     </div>
                     <div class="service-item">
                         <h3>Negociação e Fechamento de Contratos</h3>
-                        <p>Suporte completo em todas as etapas da negociação, garantindo os melhores termos para você.</p>
+                        <p style="margin-bottom: 12px;">Em cada negociação, buscamos mais do que apenas um acordo—buscamos a realização dos seus objetivos. Com nossa expertise, cada etapa do processo é tratada com a atenção e o cuidado que você merece, assegurando que seus interesses sejam sempre a prioridade.</p>
+                        <p>Fechar um contrato pode ser estressante, mas estamos aqui para fazer disso uma experiência positiva. Com nossa ajuda, você terá a certeza de que cada cláusula foi revisada e ajustada para trazer o melhor resultado possível, sem surpresas e com total transparência.</p>
                     </div>
                 </div>
             </div>
@@ -128,7 +132,7 @@
                 <div class="testimonial-carousel">
                     <blockquote class="testimonial-item">
                         <p style="width: 620px; margin: 32px; text-align: justify;">"Julia destaca-se no mercado como uma corretora de imóveis em ascensão, combinando um olhar minucioso para os detalhes com uma busca incansável por eficiência em todos os aspectos de seus serviços. Sua habilidade em unir conhecimento técnico, experiência no mercado e uma abordagem personalizada resulta em uma experiência de negociação imobiliária verdadeiramente superior. Julia não apenas atende às necessidades de seus clientes, mas se antecipa a elas, oferecendo soluções que superam expectativas e promovem a máxima satisfação. Sua dedicação inabalável à qualidade e ao sucesso de cada transação reflete um compromisso inigualável com a excelência, transformando a experiência de compra e venda de imóveis em algo realmente diferenciado."</p>
-                        <div class="client-profile" style="max-width: 150px; height: 100%; center; text-align: center; align-items: center;"><img class="client-icon" src="https://github.com/jpcardozx/julia_realstate/blob/main/logos/assets/20240117_145921.jpg?raw=true" width="50px" height="50px"><p class="client-id">João Pedro C., Desenvolvedor FrontStack e Advogado</p></div>
+                        <div class="client-profile" style="max-width: 250px; height: 100%; center; text-align: center; align-items: center;"><img class="client-icon" src="https://github.com/jpcardozx/julia_realstate/blob/main/logos/assets/20240117_145921.jpg?raw=true" width="50px" height="50px"><p class="client-id">João Pedro C., Desenvolvedor FrontStack e Advogado</p></div>
                     </blockquote>
                 </div>
             </div>
@@ -159,31 +163,15 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info">
-                    <img src="https://github.com/jpcardozx/julia_realstate/blob/main/logos/cdmp/cdmp%20(2)/1.png?raw=true" alt="Julia Maria Paiva Imóveis" width="150" height="150">
+                    <img src="https://github.com/jpcardozx/julia_realstate/blob/main/logos/cdmp/jmcm.png?raw=true" alt="Julia Maria Paiva Imóveis" width="250" height="250">
                     <p>Julia Maria Paiva Cardozo de Mello</p>
                     <p>CRECI/SP nº 282.864-F</p>
                     <p>Tel: (11) 98102-47499</p>
                     <p>Email: contato@juliamariapaivaim.com.br</p>
                 </div>
-                <nav class="footer-nav">
-                    <ul>
-                        <li><a href="#home">Início</a></li>
-                        <li><a href="#about">Sobre Mim</a></li>
-                        <li><a href="#properties">Imóveis</a></li>
-                        <li><a href="#services">Serviços</a></li>
-                        <li><a href="#testimonials">Depoimentos</a></li>
-                        <li><a href="#contact">Contato</a></li>
-                    </ul>
-                </nav>
-                <div class="social-media">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
-            <div class="copyright">
-                <p>&copy; coded by @jpcardox. 2024 Julia Maria Paiva Imóveis. Todos os direitos reservados.</p>
-            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 Julia Maria Paiva Imóveis. Todos os direitos reservados. Coded by @jpcardox. </p>
         </div>
     </footer>
 
